# autopilot

./: .gitignore  .mcp.json  LICENSE  README.md  litellm_config.yaml  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  agentapi.py  base.py  claude_code.py  codex.py  kimi.py  local.py  openclaw.py
autopilot_core/: __init__.py  cli.py  cost_tracker.py  dispatcher.py  event_bus.py  queue.py  router.py  task.py
bridge/: agent_ops_bridge.py
examples/quickstart/: run_demo.py
plugins/: __init__.py
tests/: test_adapters.py  test_agentapi_adapter.py  test_bridge.py  test_cli_bridge.py  test_codex_adapter.py  test_cost_tracker.py  test_dispatcher.py  test_event_bus.py  test_queue.py  test_router.py  test_task.py
