[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopilot-core"
version = "0.1.0"
description = "Open-source control plane for autonomous AI agent clusters"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "WuKong AI", email = "team@wukongai.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
autopilotctl = "autopilot_core.cli:main"

[project.urls]
Homepage = "https://github.com/WuKongAI-CMU/autopilot"
Repository = "https://github.com/WuKongAI-CMU/autopilot"

[tool.setuptools.packages.find]
include = ["autopilot_core*", "adapters*", "plugins*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
